gitignore updated for _ in filename

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# My own additions
+# evth, which starts from '_' -- my iterational tryings of all the stuff, no needed to be logged
+**/_* 
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
